renamed:    Linear system of equations/023-linsys-gauss-LU.ipynb -> Linear system of equations/023-linsys-gauss.ipynb 	renamed:    Linear system of equations/023a-linsys-LU-onion.ipynb -> Linear system of equations/023a-linsys-LU.ipynb

--- a/Linear system of equations/023-linsys-gauss.ipynb
+++ b/Linear system of equations/023-linsys-gauss.ipynb
@@ -49,9 +49,9 @@
     "## Learning Objectives\n",
     "\n",
     "By the end of this page, you should know:\n",
-    "- what the $LU$ factorization of a matrix is\n",
-    "- how to apply $LU$ factorization to solve systems of linear equations\n",
-    "- how this approach relates to Gaussian Elimination (forward elimination and back substitution)"
+    "- Gaussian elimination for regular matrices using matrix representation\n",
+    "- what are pivots in a matrix\n",
+    "- algorithm to solve linear equations using Gaussian elimination and back substitution"
    ]
   },
   {
@@ -209,112 +209,95 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "8a40ebc5-ca2e-4efb-9fa7-67b860d67463",
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "dd1614ee-8355-4170-8d8e-02128fc97969",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Elementary Matrices\n",
-    "It turns out that our strategy of adding equations together is in fact an operation that can be realized by matrix multiplication.  Our starting point will be to introduce a the idea of an _elementary matrix_, which encodes the corresponding elementary operation.  So far we've only seen the elementary operation of adding equations together, which we recall, is equivalent to adding rows of the augmented matrix $M = [A \\, | \\, \\vv b]$ together, but we'll see other types of operations shortly.  The definition below will work for all of them.\n",
+    "# Gaussian elimination and back substitution\n",
     "\n",
-    "```{prf:definition} Elementary Matrix\n",
-    ":label: elementary\n",
-    "The _elementary matrix_ associated with an elementary row operation for $m$-rowed matrices is the $m \\times m$ matrix obtained by applying the the row operation to the $m\\times m$ identity matrix $I_m$.\n",
-    "```\n",
+    "import numpy as np\n",
     "\n",
-    "This definition is a bit abstract, so let's see it in action.  Suppose that we have a system of three equations in three unknowns, encoded by the augmented matrix $M = [ A\\, | \\, \\vv b]$, where $A$ is a $3\\times 3$ matrix and $\\vv b$ is a $3 \\times 1$ vector.  What is the elementary matrix associated with subtracting twice the first row from the second row?  If we start with the identify matrix \n",
-    "$$\n",
-    "I_3 = \\bm 1 & 0 & 0 \\\\ 0 & 1 & 0 \\\\ 0 & 0 & 1 \\em,\n",
-    "$$\n",
-    "and apply this operation to it, we end up with the elementary matrix \n",
-    "$$\n",
-    "E_1 = \\bm 1 & 0 & 0 \\\\ -2 & 1 & 0 \\\\ 0 & 0 & 1\\em,\n",
-    "$$\n",
-    "which we named $E_1$ just to keep track of which elementary matrix we are talking about later on.  Let's check if it does what it's supposed to on a two different $3 \\times 3$ matrices \n",
-    "$$\n",
-    "\\underbrace{\\bm 1 & 0 & 0 \\\\ -2 & 1 & 0 \\\\ 0 & 0 & 1\\em}_{E_1}\\bm 1 & 2 & 3 \\\\ 4 & 5 & 6 \\\\ 7 & 8 & 9 \\em = \\bm 1 & 2 & 3 \\\\ 2 & 1 & 0 \\\\ 7 & 8 & 9 \\em, \\quad \\underbrace{\\bm 1 & 0 & 0 \\\\ -2 & 1 & 0 \\\\ 0 & 0 & 1\\em}_{E_1}\\bm 1 & 2 & 3 \\\\ 1 & 2 & 3 \\\\ 1 & 2 & 3 \\em =\\bm 1 & 2 & 3 \\\\ -1 & -2 & -3 \\\\ 1 & 2 & 3 \\em .\n",
-    "$$\n",
-    "Indeed it does, and by playing around with our rules of matrix arithmetic and multiplication, you should be able to convince yourself that that left multiplying _any_ 3-row matrix by $E_1$ will subtract twice its from its second row.\n",
+    "def GaussElem(A, b):\n",
+    "    M = np.hstack((A, b))\n",
+    "    \n",
+    "    n = A.shape[0] # number of rows of A = number of equations\n",
+    "    \n",
+    "    # Gaussian elimination\n",
+    "    for j in range(n):\n",
+    "        if M[j, j] == 0:\n",
+    "            print(\"A is not regular\")\n",
+    "            break\n",
+    "        else:\n",
+    "            for i in range(j+1, n):\n",
+    "                scalar = M[i, j]/M[j, j]\n",
+    "                M[i, :] = M[i, :] - scalar*M[j, :]\n",
     "\n",
-    "We can also use [](#elementary) to reverse engineer what row operation an elementary matrix is encoding.\n",
+    "    # back substitution\n",
+    "    x = np.zeros((n,))\n",
     "\n",
-    "````{exercise} Reverse Engineering Elementary Matrices\n",
-    ":label: em-ex\n",
-    "What elementary row operations are realized if we left multiply by the following matrices?\n",
-    "$$\n",
-    "E_2 = \\bm 1 & 0 & 0 \\\\ 0 & 1 & 0 \\\\ -1 & 0 & 1 \\em, \\quad E_3 = \\bm 1 & 0 & 0 \\\\ 0 & 1 & 0 \\\\ 0 & \\frac{1}{2} & 1 \\em.\n",
-    "$$\n",
-    ":::{hint} Click me for a hint!\n",
-    ":class: dropdown\n",
-    "What would I have to do to\n",
-    "$$\n",
-    "I_3 = \\bm 1 & 0 & 0 \\\\ 0 & 1 & 0 \\\\ 0 & 0 & 1 \\em,\n",
-    "$$\n",
-    "to get $E_2$ and $E_3$?\n",
-    ":::\n",
-    "```{solution} em-ex\n",
-    ":class: dropdown\n",
-    "Left multiplying by $E_2$ realizes subtracting the first row from the last row of a matrix.  This is true because to get the last row of $E_2$, $\\bm -1 & 0 & 1\\em$ from $I_3$, we need to subract the first row $\\bm 1 & 0 & 0 \\em$ of $I_3$ from the last row $\\bm 0 & 0 & 1 \\em$ of $I_3$.\n",
-    "\n",
-    "Using similar reasoning, we see that left multiplying by $E_3$ realizes adding $1/2$ the second row of a matrix to its last row.\n",
-    "```\n",
-    "````\n",
-    "\n",
-    "### Elementary Matrices in Action\n",
-    "Let us use elementary matrices to design a matrix that can help us solve linear equations.  Let's revisit the very first system of equations we encountered:\n",
-    "\\begin{eqnarray}\n",
-    "\\label{simple-linsys}\n",
-    "x_1+2x_2+x_3 & = 2,\\\\\n",
-    "2x_1+6x_2+x_3 & =7,\\\\\n",
-    "x_1+x_2+4x_3 & =3,\n",
-    "\\end{eqnarray}\n",
-    "or in matrix-vector form\n",
-    "$$\\underbrace{\\begin{bmatrix} 1 & 2 & 1 \\\\\n",
-    "2 & 6 & 1 \\\\\n",
-    "1 & 1 & 4 \\end{bmatrix}}_A\\underbrace{\\begin{bmatrix} x_1 \\\\ x_2 \\\\ x_3 \\end{bmatrix}}_{\\vv x} = \\underbrace{\\begin{bmatrix} 2 \\\\ 7 \\\\ 3 \\end{bmatrix}}_{\\vv b}\n",
-    "$$\n",
-    "which we solved by first applying the row operation encoded by $E_1$ (subtracted twice equation 1 from equation 2), then applying the operation encoded by $E_2$ (subtract the first equation from the last equation ), and finally by applying the operation encoded by $E_3$ (add 1/2 first equation to last equation).  Funny how that conveninently worked out!  Therefore, if we keep careful track of the row operations and their matrix multiplication realizations, we conclude that:\n",
-    "$$\n",
-    "A = \\begin{bmatrix} 1 & 2 & 1 \\\\\n",
-    "2 & 6 & 1 \\\\\n",
-    "1 & 1 & 4 \\end{bmatrix}, \\quad E_3 E_2 E_1 A = U = \\bm 1 & 2 & 1 \\\\ 0 & 2 & -1 \\\\ 0 & 0 & \\frac{5}{2} \\em.\n",
-    "$$\n",
-    "The way to read the expression $E_3 E_2 E_1 A$ is from left-to-right: we start with $A$, then apply $E_1$, then $E_2$, and finally $E_3$.  If we give the composition of elementary operations a name, say $E = E_3 E_2 E_1 A$, then we can check that $E [A \\, | \\, \\vv b] = [U \\, | \\, \\vv c]$, that is to say left multiplying the augmented matrix $M = [A \\, | \\, \\vv b]$ by the matrix $E$ performs Gaussian Elmination for us!  This is just a first taste of a powerful feature of linear algebra: _we can encode very sophisticated and complex operations via matrix multiplication._\n",
-    "```{important}\n",
-    "The order of the operations here matters!  For example, $E_2 E_1 E_3 A$ is a very different matrix than $E_3 E_2 E_1 A$.\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7a0c13f7-bef5-4b4a-9b35-1ed79560f3aa",
-   "metadata": {},
-   "source": [
-    "### Solving Linear Equations with $LU$-factorizations\n",
-    "We've made a lot of progress, but we still do not have a way of dealing with cases where the matrix $A$ is not regular, i.e., when it has pivots that are zero.  We'll defer that situation for a little bit still, and instead look at why we bothered with $LU$-factorizations to begin with!  Suppose we are interested in solving a system of linear equations $A\\vv x = \\vv b$, and we assume that $A$ is regular so that we can apply the algorithm above to compute an $LU$-facotrization of $A$, i.e., we find a lower triangular matrix $L$ and an upper triangular matrix $U$ so that $A=LU$.  Then our linear system becomes $LU\\vv x = \\vv b$.  \n",
-    "\n",
-    "Neat, but so what?  Well we know how to solve linear systems that look like $U\\vv x = \\vv z$, for $U$ upper triangular, by Back Substitution, and while we haven't seen it explicitly, hopefully you believe that we can solve linear systems that look like $L\\vv y = \\vv c$, for $L$ lower triangular, by _Forward Substitution_.[^fsub]  Our strategy will be to turn solving $A\\vv x = \\vv b$ into solving a lower triangular system by Forward Substitution, and then an upper triangular system by Back Substitution, both things we know how to do easily!  With that in mind, let us introduce a new intermediate variable $\\vv z = U \\vv x$.  Then I can find the solution to $A\\vv x = LU\\vv x = \\vv b$ by solving\n",
-    "$$\n",
-    "L\\vv z = \\vv b,\n",
-    "$$\n",
-    "for $\\vv z$ via Forward Substitution, and then solving \n",
-    "$$\n",
-    "U \\vv x = \\vv z,\n",
-    "$$\n",
-    "for $\\vv x$ via Backward Substitution.  If we piece everything together, we see that $\\vv x$ is indeed a solution to our original equation $A\\vv x = \\vv b$ because\n",
-    "$$\n",
-    "A\\vv x = L\\underbrace{U \\vv x}_{=\\vv z}= \\underbrace{L\\vv z}_{=\\vv b} = \\vv b.\n",
-    "$$\n",
-    "\n",
-    "[^fsub]: Forward Substitution is exactly what it sounds like.  To solve $L\\vv y = \\vv c$, when $L$ is lower triangular, we start at the top row and set $y_1 = c_1/l_{11}$. We then move down a row, and solve $l_{21}y_1 + l_{22}y_2 = c_2$ by plugging in $y_1$ and solving for $y_2$.  We continue in this manner until we've solved for $\\vv y$."
+    "    x[n-1] = M[n-1, -1]/M[n-1, n-1] # -1 is the last index of the particular axis in a python array\n",
+    "    for i in range(n-2, -1, -1): # range(a, b, c) returns the list [a, a+c ,a+2c, ..., b) \n",
+    "        x[i] = (M[i, -1] - np.sum(M[i, i+1:-1]*x[i+1:]))/M[i, i] # * is elementwise multiplication of arrays\n",
+    "    \n",
+    "    return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f1d3acfc-93ea-42bf-9d2f-53d30b2d6c75",
+   "execution_count": 45,
+   "id": "c193094b-cd70-4f6f-ace4-4ebf51a078d6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-3.,  2.,  1.])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = np.array([[1, 2, 1],\n",
+    "              [2, 6, 1],\n",
+    "              [1, 1, 4]])\n",
+    "b = np.array([[2],\n",
+    "              [7],\n",
+    "              [3]])\n",
+    "\n",
+    "x = GaussElem(A, b)\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "7a2401dc-1925-4c58-91cf-4c34cdc6def1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-3.],\n",
+       "       [ 2.],\n",
+       "       [ 1.]])"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# solve linear system of equations Ax=b using NumPy's inbuilt function\n",
+    "\n",
+    "x_numpy = np.linalg.solve(A, b) \n",
+    "x_numpy"
+   ]
   }
  ],
  "metadata": {
