reorganizing exercises and adding in examples for linear combinations

--- a/Linear system of equations/022-linsys-matvec.ipynb
+++ b/Linear system of equations/022-linsys-matvec.ipynb
@@ -134,43 +134,8 @@
     "$$\n",
     "\\bm 1 & 2 \\\\ -1 & 0\\em + \\bm 3 & -5 \\\\ 2 & 1 \\em = \\bm 4 & -3 \\\\ 1 & 1 \\em.\n",
     "$$\n",
-    "More generally, if $A$ and $B$ are $m \\times n$ matrices, then their sum $C = A+ B$ is the $m \\times n$ matrix whose entries are given by $c_{ij} = a_{ij} + b_{ij}$ for $i=1,\\dots,m$ and $j=1,\\dots,n$.  When defined, matrix addition behaves just like ordinary addition.  It is commutative, so $A + B = B + A$, and associative, so $A + (B + C) = (A+ B) + C = A + B + C$.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "87d9db14-cb47-4734-89f6-51c613d04667",
-   "metadata": {},
-   "source": [
-    "### Scalar multiplication\n",
-    "A _scalar_ is a fancy name for an ordinary number.  For now, we restrict ourselves to scalars, vectors, and matrices with _real_ entries, but we will eventually extend these ideas to complex numbers and matrices with complex entries.  Although technically not the same thing, we will treat the $1 \\times 1$ matrix $[c]$ and the scalar $c \\in \\R$ as a scalar,[^notation] that is to say as an ordinary number, so we will drop the brackets. _Scalar multiplication_ takes a scalar $c$ and an $m \\times n$ matrix $A$ an computes the $m \\times n$ matrix $B = cA$ by multiplying each entry of $A$ by $c$.  For example:\n",
-    "$$\n",
-    "c = 3, \\quad A = \\bm 1 & 2 \\\\ -1 & 0 \\em, \\quad cA = 3\\bm 1 & 2 \\\\ -1 & 0 \\em=\\bm 3 & 6 \\\\ -3 & 0\\em.\n",
-    "$$\n",
-    "In general, if $B = cA$, then $b_{ij}=ca_{ij}$ for each entry $i=1,\\dots,m$ and $j=1,\\dots,n$.\n",
+    "More generally, if $A$ and $B$ are $m \\times n$ matrices, then their sum $C = A+ B$ is the $m \\times n$ matrix whose entries are given by $c_{ij} = a_{ij} + b_{ij}$ for $i=1,\\dots,m$ and $j=1,\\dots,n$.  When defined, matrix addition behaves just like ordinary addition.  It is commutative, so $A + B = B + A$, and associative, so $A + (B + C) = (A+ B) + C = A + B + C$.\n",
     "\n",
-    "[^notation]: Remember that we write $x \\in S$ to mean that the element $x$ lives in the set $S$.  In this example, $c \\in \\R$ means that the element $c$ lives in the real line $\\R$, and hence $c$ is a scalar.\n",
-    "\n",
-    "### Summary\n",
-    "Using the definitions and properties above, it is not too hard, albeit a bit tedious, to show that the usual rules of algebra apply to sums and scalar multiples of matrices, as the following theorem shows.\n",
-    "```{prf:theorem}\n",
-    ":label: matalg-thm\n",
-    "Let $A$, $B$, and $C$ be matrices of the same size, say $m \\times n$, and let $r$ and $s$ be scalars.  Then\\\n",
-    "a. $A + B = B + A$\\\n",
-    "b. $(A+B) + C = A + (B + C)$\\\n",
-    "c. $A + 0 = A$\\\n",
-    "d. $r(A+B) = rA + rB$\\\n",
-    "e. $(r+s)A = rA + sA$\\\n",
-    "f. $r(sA)=(rs)A$\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c75b6368-db39-46ab-a675-f055e405179e",
-   "metadata": {},
-   "source": [
-    "### Worked Examples\n",
     "````{exercise}  Matrix addition\n",
     ":label: matrix-addition-ex1\n",
     "\n",
@@ -200,7 +165,41 @@
     "e. $\\begin{bmatrix} 1\\\\2 \\end{bmatrix} + \\begin{bmatrix} 1\\\\3 \\end{bmatrix} + \\begin{bmatrix} 2\\\\5 \\end{bmatrix} = \\bm 1 + 1 + 2 \\\\ 2 + 3 + 5 \\em = \\bm 4 \\\\ 10 \\em$\n",
     "\n",
     "```\n",
-    "````\n",
+    "````"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96992cbb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Matrix addition\n",
+    "\n",
+    "B = np.array([[2, 4, 6],\n",
+    "             [8, 10, 12]])\n",
+    "add = A + B # adding two matrices\n",
+    "# this is a 1-D array of size 3 in python, which is different than the column-vector c created above\n",
+    "vec = np.array([-1, -2, 3]) \n",
+    "# notice the difference how 1-D arrays add to 2-D arrays in python. # Try A+c and observe what happens\n",
+    "add_vec = A + vec \n",
+    "add_vec"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87d9db14-cb47-4734-89f6-51c613d04667",
+   "metadata": {},
+   "source": [
+    "### Scalar multiplication\n",
+    "A _scalar_ is a fancy name for an ordinary number.  For now, we restrict ourselves to scalars, vectors, and matrices with _real_ entries, but we will eventually extend these ideas to complex numbers and matrices with complex entries.  Although technically not the same thing, we will treat the $1 \\times 1$ matrix $[c]$ and the scalar $c \\in \\R$ as a scalar,[^notation] that is to say as an ordinary number, so we will drop the brackets. _Scalar multiplication_ takes a scalar $c$ and an $m \\times n$ matrix $A$ an computes the $m \\times n$ matrix $B = cA$ by multiplying each entry of $A$ by $c$.  For example:\n",
+    "$$\n",
+    "c = 3, \\quad A = \\bm 1 & 2 \\\\ -1 & 0 \\em, \\quad cA = 3\\bm 1 & 2 \\\\ -1 & 0 \\em=\\bm 3 & 6 \\\\ -3 & 0\\em.\n",
+    "$$\n",
+    "In general, if $B = cA$, then $b_{ij}=ca_{ij}$ for each entry $i=1,\\dots,m$ and $j=1,\\dots,n$.\n",
+    "\n",
+    "[^notation]: Remember that we write $x \\in S$ to mean that the element $x$ lives in the set $S$.  In this example, $c \\in \\R$ means that the element $c$ lives in the real line $\\R$, and hence $c$ is a scalar.\n",
     "\n",
     "````{exercise}  Scalar multiplication\n",
     ":label: scalar-multiplication-ex1\n",
@@ -236,59 +235,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "e4c53400-b163-4e7a-9f5a-2d1f29a2ebbf",
+   "execution_count": null,
+   "id": "f99a5225",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0, 0, 6],\n",
-       "       [3, 3, 9]])"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "## Matrix addition\n",
-    "\n",
-    "B = np.array([[2, 4, 6],\n",
-    "             [8, 10, 12]])\n",
-    "add = A + B # adding two matrices\n",
-    "# this is a 1-D array of size 3 in python, which is different than the column-vector c created above\n",
-    "vec = np.array([-1, -2, 3]) \n",
-    "# notice the difference how 1-D arrays add to 2-D arrays in python. # Try A+c and observe what happens\n",
-    "add_vec = A + vec \n",
-    "add_vec"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "bfda96c8-d084-4961-9c1a-40b458947086",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 3,  6,  9],\n",
-       "       [12, 15, 18]])"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# scalar multiplication\n",
     "scalar = 3\n",
     "scalar_mult = scalar*A\n",
     "scalar_mult\n",
     "# Try vec*A and notice the difference"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c75b6368-db39-46ab-a675-f055e405179e",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### Summary\n",
+    "Using the definitions and properties above, it is not too hard, albeit a bit tedious, to show that the usual rules of algebra apply to sums and scalar multiples of matrices, as the following theorem shows.\n",
+    "```{prf:theorem}\n",
+    ":label: matalg-thm\n",
+    "Let $A$, $B$, and $C$ be matrices of the same size, say $m \\times n$, and let $r$ and $s$ be scalars.  Then\\\n",
+    "a. $A + B = B + A$\\\n",
+    "b. $(A+B) + C = A + (B + C)$\\\n",
+    "c. $A + 0 = A$\\\n",
+    "d. $r(A+B) = rA + rB$\\\n",
+    "e. $(r+s)A = rA + sA$\\\n",
+    "f. $r(sA)=(rs)A$\n",
+    "```"
    ]
   },
   {
@@ -315,9 +291,27 @@
     "\\pi \\vv v_1 + v_2, \\quad \\frac{1}{2}\\vv v_1 (=\\frac{1}{2}\\vv v_1 + 0 \\vv v_2), \\quad \\vv 0(=0\\vv v_1 + 0 \\vv v_2).\n",
     "$$\n",
     "\n",
-    "```{prf:example} Linear Combinations of $2 \\times 1$ vectors\n",
-    "TODO Example 4 in Ch 1.3 of ALA\n",
-    "```\n",
+    "````{exercise}  Linear Combinations of Vectors \n",
+    ":label: linear-combinations-ex1 \n",
+    "\n",
+    "For (a)-(c), simplify the linear combination of vectors. \n",
+    "\n",
+    "a. $4\\bm 1 \\\\ 2\\em - 1 \\bm 3 \\\\ 3\\em + 2 \\bm 0 \\\\ 2\\em$ \n",
+    "\n",
+    "b. $0\\bm 1238 \\\\ 34643 \\em + 1 \\bm  3 \\\\ 4 \\em$ \n",
+    "\n",
+    "c. $\\pi \\bm 2 \\\\ \\sqrt 2 \\em + \\sqrt 3 \\bm \\sqrt 2 \\\\ 1 \\em$ \n",
+    "\n",
+    "```{solution} linear-combinations-ex1 \n",
+    ":class: dropdown \n",
+    "\n",
+    "a. $4\\bm 1 \\\\ 2\\em - 1 \\bm 3 \\\\ 3\\em + 2 \\bm 0 \\\\ 2\\em = \\bm 4(1) - 1(3) + 2(0) \\\\ 4(2) - 1(3) + 2(2) \\em = \\bm 1 \\\\ 9\\em$ \n",
+    "\n",
+    "b. $0\\bm 1238 \\\\ 34643 \\em + 1 \\bm  3 \\\\ 4 \\em = \\bm 0(1238) + 1(3) \\\\ 0(34643) + 1(4) \\em = \\bm 3 \\\\ 4 \\em$ \n",
+    "\n",
+    "c. $\\pi \\bm 2 \\\\ \\sqrt 2 \\em + \\sqrt 3 \\bm \\sqrt 2 \\\\ 1 \\em = \\bm 2\\pi + \\sqrt 3\\sqrt 2 \\\\ \\pi \\sqrt 2 + \\sqrt 3\\em = \\bm 2\\pi + \\sqrt 6 \\\\ \\pi \\sqrt 2 + \\sqrt 3 \\em$ \n",
+    "``` \n",
+    "````\n",
     "\n",
     "With [](#lincombo) in hand, we introduce (a maybe new to you definition of) matrix-vector multiplication as a linear combination of the columns of a matrix.\n",
     "````{prf:definition} Matrix-Vector Multiplication\n",
@@ -327,10 +321,6 @@
     "A\\vv x = \\bm \\vv a_1 & \\vv a_2 & \\cdots & \\vv a_n\\em\\bm x_1 \\\\ x_2 \\\\ \\vdots \\\\ x_n\\em = x_1 \\vv a_1 + x_2 \\vv a_2 + \\cdots \\vv x_n a_n.\n",
     "```\n",
     "Note that $A\\vv x$ is defined only if the number of columns of $A$ equals the number of entries in $\\vv x$.\n",
-    "````\n",
-    "\n",
-    "```{prf:example} Some Matrix-Vector Products\n",
-    "TODO\n",
     "````"
    ]
   },
