lynsys: matrix-vector worked examples

--- a/Linear system of equations/022-linsys-matvec.ipynb
+++ b/Linear system of equations/022-linsys-matvec.ipynb
@@ -325,6 +325,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2d2ae69a",
+   "metadata": {},
+   "source": [
+    "````{exercise}  Matrix-Vector Multiplication\n",
+    ":label: matrix-vector-multiplication-ex1 \n",
+    "\n",
+    "For (a)-(d), simplify the matrix-vector products if they exist; otherwise, indicate that the product doesn't exist.\n",
+    "\n",
+    "a. $\\bm 1 & 1 \\\\ 1 & 0 \\em \\bm 13\\\\ 8 \\em$\n",
+    "\n",
+    "b. $\\bm 2 & 4 & 1 \\\\ 0 & 3 & -1 \\\\ 5 & -2 & 2 \\em \\bm 1\\\\2\\\\3 \\em$\n",
+    "\n",
+    "c. $\\bm 1 & 2 \\\\ 3 & 4 \\\\ 5 & 6 \\\\ 7 & 8 \\em \\bm 2\\\\ 1 \\em$\n",
+    "\n",
+    "d. $\\bm 2 & 3 \\\\ 4 & 5 \\\\ 6 & 7 \\em \\bm 1 \\\\ 2 \\\\ 0 \\em$\n",
+    "\n",
+    "```{solution} matrix-vector-multiplication-ex1 \n",
+    ":class: dropdown \n",
+    "\n",
+    "a. $\\bm 1 & 1 \\\\ 1 & 0 \\em \\bm 13\\\\ 8 \\em = 13\\bm 1 \\\\ 1 \\em + 8\\bm 1 \\\\ 0 \\em = \\bm 1(13) + 1(8) \\\\ 1(13) + 0(8)\\em = \\bm 21 \\\\ 13\\em$\n",
+    "\n",
+    "b. $\\bm 2 & 4 & 1 \\\\ 0 & 3 & -1 \\\\ 5 & -2 & 2 \\em \\bm 1\\\\2\\\\3 \\em = 1 \\bm 2\\\\0\\\\5\\em + 2\\bm 4\\\\3\\\\-2\\em + 3\\bm 1\\\\-1\\\\2\\em = \\bm 13 \\\\ 3\\\\7 \\em$\n",
+    "\n",
+    "c. $\\bm 1 & 2 \\\\ 3 & 4 \\\\ 5 & 6 \\\\ 7 & 8 \\em \\bm 2\\\\ 1 \\em = 2 \\bm 1\\\\ 3\\\\ 5\\\\ 7\\em + 1 \\bm 2\\\\ 4\\\\ 6\\\\ 8\\em = \\bm 2(1) + 1(2) \\\\ 2(3) + 1(4) \\\\ 2(5) + 1(6) \\\\ 2(7) + 1(8) \\em = \\bm 4\\\\ 10\\\\ 16\\\\ 22 \\em$\n",
+    "\n",
+    "d. Doesn't exist, because the matrix has 2 columns, whereas the vector has 3 entries.\n",
+    "\n",
+    "``` \n",
+    "````"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "dce266e0-5211-4d76-98db-aa1215562d0e",
