linsys matrix-vector notation worked exercise

--- a/Linear system of equations/022-linsys-matvec.ipynb
+++ b/Linear system of equations/022-linsys-matvec.ipynb
@@ -422,73 +422,49 @@
     "1 & 1 & 4 \\end{bmatrix}, \\quad \\vv x = \\begin{bmatrix} x_1 \\\\ x_2 \\\\ x_3 \\end{bmatrix}, \\quad \\vv b = \\begin{bmatrix} 2 \\\\ 7 \\\\ 3 \\end{bmatrix}.\n",
     "$$\n",
     "\n",
-    "If a variable doesn't appear in an equation, then the corresponding matrix entry is 0.\n",
+    "If a variable doesn't appear in an equation, then the corresponding matrix entry is 0.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a3f89a9",
+   "metadata": {},
+   "source": [
+    "````{exercise}  Writing linear systems in matrix-vector notation\n",
+    ":label: matrix-vector-notation-ex1 \n",
     "\n",
+    "Write the following system of linear equations in matrix-vector notation:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "2x + 3y - z + 4w &= 10 \\\\\n",
+    "3x - 2y + 5z - w &= 5 \\\\\n",
+    "x + 4y - 3z + 2w &= -3 \\\\\n",
+    "\\end{align*}\n",
+    "\n",
+    "```{solution} matrix-vector-notation-ex1 \n",
+    ":class: dropdown \n",
+    "\n",
+    "The corresponding linear system is:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\bm 2 & 3 & -1 & 4 \\\\3 & -2 & 5 & -1 \\\\1 & 4 & -3 & 2 \\\\ \\em\\bm x \\\\y \\\\z \\\\w \\\\\\em =\\bm 10 \\\\5 \\\\-3 \\\\\\em\n",
+    "\\end{align*}\n",
+    "\n",
+    "``` \n",
+    "````"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "970cc4e1",
+   "metadata": {},
+   "source": [
     "### Consequences on Systems of Linear Equations\n",
     "Our definition of $A\\vv x$ leads directly to the following very useful fact.\n",
     "```{important}\n",
     "The equation $A\\vv x = \\vv b$ has a solution if and only if $\\vv b$ is a linear combination of the colums of $A$.\n",
     "```\n",
     "When we introduce vector spaces in the next chapter, we will revisit this fact and see that it gives a very clear picture of the _geometry_ of systems of linear equations, and will allows us to answer questions like \"Given a matrix $A$, for what right hand sides $\\vv b$ does the equation $A\\vv x=\\vv b$ have a solution?\" and \"When does $A\\vv x = \\vv b$ have no solution? infinite solutions?\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8525c0cb-a973-4e86-8d3b-b77ea2c1235b",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
-   "source": [
-    "### Worked examples"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6ceffd52-56eb-4625-8fbc-e4696a69e3f4",
-   "metadata": {},
-   "source": [
-    "````{exercise}  TODO\n",
-    ":label: row-reduce-ex1\n",
-    "\n",
-    "What is 2 + 2\n",
-    "\n",
-    ":::{hint} Click me for a hint!\n",
-    ":class: dropdown\n",
-    "\n",
-    "It's more than 3 and less than 5!\n",
-    "\n",
-    ":::\n",
-    "```{solution} my-exercise\n",
-    ":class: dropdown\n",
-    "\n",
-    "It's 4!\n",
-    "\n",
-    "```\n",
-    "````"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2c6493b5-6b12-415a-a159-646579661219",
-   "metadata": {},
-   "source": [
-    "````{exercise}  TODO\n",
-    ":label: row-reduce-ex1\n",
-    "Write me\n",
-    ":::{hint} Click me for a hint!\n",
-    ":class: dropdown\n",
-    "Write me\n",
-    "\n",
-    ":::\n",
-    "```{solution} my-exercise\n",
-    ":class: dropdown\n",
-    "Write me\n",
-    "```\n",
-    "````"
    ]
   },
   {
