matrix multiplication exercises

--- a/Linear system of equations/022-linsys-matvec.ipynb
+++ b/Linear system of equations/022-linsys-matvec.ipynb
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "d860eeea-d52d-4322-b5f1-64bdc7fbed63",
    "metadata": {},
    "outputs": [],
@@ -359,22 +359,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "dce266e0-5211-4d76-98db-aa1215562d0e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 8],\n",
-       "       [17]])"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# matrix vector multiplication\n",
     "product = A @ c # multipying matrix A with column-vector c\n",
@@ -547,6 +535,8 @@
     "$$\n",
     "Therefore multiplying $\\vv x$ by $\\bm A\\vv b_1 & A\\vv b_2 & \\cdots & A\\vv b_p\\em$ directly transforms $\\vv x4 into $A(B\\vv x)$: we found the matrix we were looking for!\n",
     "````{prf:definition}\n",
+    ":label: matmul-def1\n",
+    "\n",
     "If A is an $m \\times n$ matrix, and if $B$ is an $n \\times p$ matrix with columns $\\vv b_1,\\dots,\\vv b_p$, then the matrix product $AB$ is then the $m \\times p$ matrix whose columns are $A\\vv b_1, A\\vv b_2,\\dots, A\\vv b_p$, that is,\n",
     "```{math}\n",
     ":label: matmul-def\n",
@@ -563,42 +553,33 @@
    "id": "33ccb20b-ec41-4442-815d-d3fdc842332e",
    "metadata": {},
    "source": [
-    ":::{prf:example}  TODO: Example of Computing\n",
-    ":label: matmul-example\n",
-    "write me\n",
-    ":::\n",
-    "\n",
-    "````{exercise}  TODO: Exercise testing size of $AB$ and $BA$\n",
+    ":::{prf:example}  Matrix Multiplication, [](#matmul-def1)\n",
     ":label: matmul-ex1\n",
-    "Write me:\n",
-    ":::{hint} Click me for a hint!\n",
-    ":class: dropdown\n",
-    "Write me\n",
     "\n",
-    ":::\n",
-    "```{solution} my-exercise\n",
-    ":class: dropdown\n",
-    "Write me\n",
-    "```\n",
-    "````"
+    "Let's compute the matrix product\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\bm 1&2&3\\\\4&5&6\\\\7&8&9 \\em \\bm -1&0&1\\\\2&-2&3\\\\4&5&-3\\em\n",
+    "\\end{align*}\n",
+    "\n",
+    "using [](#matmul-def1):\n",
+    "\n",
+    "\\begin{align*}\n",
+    " &\\bm 1&2&3\\\\4&5&6\\\\7&8&9 \\em \\bm -1&0&1\\\\2&-2&3\\\\4&5&-3\\em \\\\\n",
+    " &= \\bm \\bm 1&2&3\\\\4&5&6\\\\7&8&9 \\em \\bm -1\\\\2\\\\4\\em & \\bm 1&2&3\\\\4&5&6\\\\7&8&9 \\em \\bm 0\\\\-2\\\\5\\em & \\bm 1&2&3\\\\4&5&6\\\\7&8&9 \\em \\bm 1\\\\3\\\\-3\\em \\em\\\\\n",
+    " &= \\bm \\bm 15 \\\\ 30 \\\\ 45 \\em & \\bm 11 \\\\ 20 \\\\ 29 \\em & \\bm -2 \\\\ -1 \\\\ 4 \\em \\em\\\\\n",
+    " &= \\bm 15 & 11 & -2 \\\\ 30 & 20 & 1 \\\\ 45 & 29 & 4 \\em\n",
+    "\\end{align*}\n",
+    "\n",
+    ":::"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "5091e0ce-413c-40c1-87ce-ce07233b973f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A_C:  [[ 8 -1]\n",
-      " [17 -4]] \n",
-      "b_D:  [[-6 -1  4]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Matrix Matrix multiplication\n",
     "C = np.array([[-1, -2],\n",
@@ -615,7 +596,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5afa270-069f-4d46-a9d2-834cf50459e4",
+   "id": "1ad58dbf",
    "metadata": {},
    "source": [
     "### Row-by-Column and Column-by-Row Definition of Matrix Multiplication\n",
@@ -635,11 +616,37 @@
     "\n",
     "As an example, this tells us an alternative way to compute the matrix-vector product $A\\vv x$.  Again, assuming that the rows of $A$ are $\\vv r^A_i$, we have that the $i$th element of the product $A\\vv x$ is given by the row-vector columnt-vector product $(A\\vv x)= \\vv r^A_i \\vv x$.\n",
     "\n",
-    ":::{prf:example}  TODO: Example of Computing\n",
+    ":::{prf:example}  Matrix Multiplication, [](#rc-matmul)\n",
     ":label: rc-matmul-example\n",
-    "write me\n",
-    ":::\n",
     "\n",
+    "Let's compute the matrix product\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\bm 1&2&3\\\\4&5&6\\\\7&8&9 \\em \\bm -1&0&1\\\\2&-2&3\\\\4&5&-3\\em\n",
+    "\\end{align*}\n",
+    "\n",
+    "using [](#rc-matmul) (this is the same product in [](#matmul-ex1)):\n",
+    "\n",
+    "\\begin{align*}\n",
+    " &\\bm 1&2&3\\\\4&5&6\\\\7&8&9 \\em \\bm -1&0&1\\\\2&-2&3\\\\4&5&-3\\em \\\\\n",
+    " &= \\bm \n",
+    "    1(-1)+ 2(2) +3(4)&1(0) +2(-2) +3(5)&1(1)+ 2(3)+ 3(-3)\\\\\n",
+    "    4(-1)+ 5(2)+ 6(4)&4(0) +5(-2) +6(5)&4(1) +5(3) +6(-3)\\\\\n",
+    "    7(-1) +8(2)+ 9(4)&7(0) +8(-2) +9(5)&7(1) +8(3)+ 9(-3)\n",
+    " \\em\\\\\n",
+    "  &= \\bm 15 & 11 & -2 \\\\ 30 & 20 & 1 \\\\ 45 & 29 & 4 \\em\n",
+    "\\end{align*}\n",
+    "\n",
+    "This is the same result we got in [](#matmul-ex1).\n",
+    "\n",
+    ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abbbdbf9",
+   "metadata": {},
+   "source": [
     "```{prf:definition} Column-by-Row Matrix Multiplication\n",
     ":label: cr-matmul\n",
     "Let $A$ be an $m \\times n$ matrix, and $B$ an $n \\times p$ matrix.  Let $A$ have columns $\\vv a_i$ and $B$ have rows $\\vv r^B_i$, i.e.,\n",
@@ -652,26 +659,16 @@
     "$$\n",
     "```\n",
     "\n",
-    ":::{prf:example}  TODO: Example of Computing\n",
-    ":label: cr-matmul-example\n",
-    "write me\n",
-    ":::\n",
-    "\n",
+    "Try to calculate the product in [](#matmul-ex1) and [](#rc-matmul-example) using [](#cr-matmul), and confirm that you get the same result! "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea3dec4a",
+   "metadata": {},
+   "source": [
     "```{note}\n",
     "While [](#rc-matmul) is probably most familiar to you, we'll see that depending on the setting, it is sometimes more convenient to work with one definition of matrix-matrix multiplication rather than another.  For example, [](#cr-matmul) is kind of annoying to deal with when computing matrix-matrix products by hand (it involves a lot of writing!).  But that's ok, because while you will learn how to compute things by hand for small examples, our goal in this class is to get you solving big problems using computers, and it turns out, computers are really good at dealing with something like [](#cr-matmul).\n",
-    "```\n",
-    "\n",
-    "````{exercise}  TODO: Exercise testing size of $AB$ and $BA$\n",
-    ":label: matmul-ex2\n",
-    "Write me: work out a small example where we show all three ways of computing a matrix-matrix product give the same answer.\n",
-    ":::{hint} Click me for a hint!\n",
-    ":class: dropdown\n",
-    "Write me\n",
-    "\n",
-    ":::\n",
-    "```{solution} my-exercise\n",
-    ":class: dropdown\n",
-    "Write me\n",
     "```"
    ]
   },
@@ -760,31 +757,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "3cd633c2-ca7b-4d78-b580-16e5fc350adb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A_block: \n",
-      " [[ 1.  2.  3. -1. -1.  0.]\n",
-      " [ 4.  5.  6. -3.  4.  2.]\n",
-      " [ 1.  0.  0.  0.  0.  0.]\n",
-      " [ 0.  1.  0.  0.  0.  0.]\n",
-      " [ 0.  0.  1.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  1.  0.  0.]] \n",
-      "A_block_1: \n",
-      " [[ 1.  2.  3. -1. -1.  0.]\n",
-      " [ 4.  5.  6. -3.  4.  2.]\n",
-      " [ 1.  0.  0.  0.  0.  0.]\n",
-      " [ 0.  1.  0.  0.  0.  0.]\n",
-      " [ 0.  0.  1.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  1. -3.  3.]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Building block matrices.\n",
     "# Remember: A is of size 2x3\n",
@@ -803,26 +779,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "c8c660f5-f489-4508-91c2-9cd5a052d520",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 1.,  2.,  3., -1., -1.,  0.],\n",
-       "       [ 4.,  5.,  6., -3.,  4.,  2.],\n",
-       "       [ 1.,  0.,  0.,  0.,  0.,  0.],\n",
-       "       [ 0.,  1.,  0.,  0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  1.,  0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0.,  1.,  0.,  0.]])"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Another method of building block matrices\n",
     "# hstack: horizontal stack, vstack: vertical stack\n",
