modified:   Linear system of equations/023-linsys-gauss.ipynb

--- a/Linear system of equations/023-linsys-gauss.ipynb
+++ b/Linear system of equations/023-linsys-gauss.ipynb
@@ -15,7 +15,7 @@
     "title: Gaussian Elimination Revisited\n",
     "subject:  Linear Algebraic Systems\n",
     "subtitle: Gaussian Elimination as Matrix Factorization\n",
-    "short_title: LU Factorization\n",
+    "short_title: Gaussian Elimination using Matrices\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
     "    affiliations:\n",
