modified:   Linear system of equations/023-linsys-gauss.ipynb

--- a/Linear system of equations/023-linsys-gauss.ipynb
+++ b/Linear system of equations/023-linsys-gauss.ipynb
@@ -23,7 +23,7 @@
     "      - University of Pennsylvania\n",
     "    email: nmatni@seas.upenn.edu\n",
     "license: CC-BY-4.0\n",
-    "keywords: Gaussian Elimination, LU factorization\n",
+    "keywords: Gaussian Elimination, pivots, algorithm using matrices\n",
     "math:\n",
     "  '\\vv': '\\mathbf{#1}'\n",
     "  '\\bm': '\\begin{bmatrix}'\n",
